ID-3568, ID-3698 --> swap out fixed colors, add spacing for No Items box, sub-attributes overlapping Cancel/Save buttons at bottom fix

--- a/packages/ui-library/src/css/row-selector.scss
+++ b/packages/ui-library/src/css/row-selector.scss
@@ -3,7 +3,7 @@
 		font-size: 16px;
 		padding: 0 0 15px 0;
 		margin: 0 0 30px 0;
-		border-bottom: 1px solid #ccc;
+		border-bottom: 1px solid map-get($colors, 'rabbit-fur');
 		text-transform: uppercase;
 	}
 	.input-search {
@@ -37,14 +37,15 @@
 			top: 8px;
 		}
 		&.item-disabled {
-			background: #ddd;
+			background: map-get($colors, 'dolphin');
 			cursor: default;
 		}
 	}
 	.no-items {
 		padding: 30px;
+		margin-bottom: 15px;
 		text-align: center;
 		font-size: 12px;
-		border: 1px dashed #ccc;
+		border: 1px dashed map-get($colors, 'rabbit-fur');
 	}
 }
