--- a/packages/ui-library/src/css/task.scss
+++ b/packages/ui-library/src/css/task.scss
@@ -34,7 +34,7 @@
 			}
 		}
 		.task-content {
-			max-height: 4000px;
+			max-height: 8000px;
 		}
 		.task-title-selection {
 			@include opacity(1);
